api-macros/tests/ui/fail/missing_base_url.stderr
error: missing required `base_url` attribute: #[api(base_url = "...")]
 --> tests/ui/fail/missing_base_url.rs:5:10
  |
5 | #[derive(RestApi)]
  |          ^^^^^^^
  |
  = note: this error originates in the derive macro `RestApi` (in Nightly builds, run with -Z macro-backtrace for more info)
